--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 .App {
   display: flex;
-  align-content: center;
-  align-items: center;
   justify-content: center;
   text-align: center;
 }
@@ -24,20 +22,64 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  justify-items: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
 .idocForm {
-  background-color: gray;
+  background-color: #2D3142;
+  width: 50%;
   border-radius: 10px;
-  margin-top: 200px;
+  margin-top: 3%;
+  margin-bottom: 10%;
   padding: 20px;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
+  color: white;
+}
+
+.search{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+
+.criteria {
+  display: flex;
+  flex-direction: column;
+  background-color: #4F5D75;
+  border-radius: 5px;
+  padding: 5%;
+  margin-bottom: 2%;
+  text-align: left;
+}
+.test {
+  color: black !important;
+}
+.MuiInputBase-input{
+  color:black !important;
+  background: white;
+}
+.criterion {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+.sub-criterion {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+  margin-left: 10px;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+#eligibility {
+  padding-bottom: 2%;
 }
 
 @keyframes App-logo-spin {
@@ -47,4 +89,58 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.infoIconWrapper{
+  display: flex;
+  align-items: center;
+}
+.infoIcon{
+  margin: 5px 0 0 5px;
+  color: white;
+}
+
+.search{
+  margin-left: 10px;
+  margin-top: 5px;
+
+}
+
+.error{
+  color: red;
+}
+
+.petitionButton{
+  background-color: white;
+}
+
+.emailForm {
+  background-color: #2D3142;
+  width: 50%;
+  border-radius: 10px;
+  margin-top: 3%;
+  margin-bottom: 10%;
+  padding: 20px;
+  padding-bottom: 20px;
+  color: white;
+}
+
+.formEmail {
+  background-color: #b2c8d9;
+  margin-bottom: 20px;
+  padding: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-radius: 10px;
+  color: #2D3142;
+}
+
+h3{
+  margin-top: -5px;
+  margin-bottom: 40px;
+  font-size: x-large;
+  font-weight: 500;
+  color: #2D3142;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
